Engine/Language/Java/MsdsParser.java
// Generated from d:\github\Validation\Engine\Language\MsdsParser.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MsdsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AFTER=1, ALL=2, AND=3, AS=4, BEFORE=5, BY=6, COLLECTION=7, DO=8, DEFINE=9, 
		ELSE=10, EXIST=11, EXPECT=12, FALSE=13, FOR=14, INCLUDES=15, IN=16, IS=17, 
		MATCH=18, NOT=19, NULL=20, OF=21, OR=22, REQUIRE=23, RULE=24, RULESET=25, 
		SINCE=26, TRUE=27, THAT=28, THE=29, THEN=30, TODAY=31, UNIQUE=32, WHEN=33, 
		LT=34, LE=35, EQ=36, GE=37, GT=38, NE=39, L_PAREN=40, R_PAREN=41, L_BRACKET=42, 
		R_BRACKET=43, L_BRACE=44, R_BRACE=45, COMMA=46, DOT=47, NEG=48, RULEID1=49, 
		RULEID2=50, INT=51, NUMBER=52, DATE1=53, DATE2=54, AGGREGATE=55, COUNT=56, 
		CARDINAL=57, DATEOP=58, MONTH=59, TIMEUNIT=60, WEEKDAY=61, ID=62, STRING=63, 
		COMMENT=64, WS=65;
	public static final int
		RULE_file = 0, RULE_collection = 1, RULE_collectionid = 2, RULE_aliasId = 3, 
		RULE_alias = 4, RULE_aliasDefinitions = 5, RULE_ruleset = 6, RULE_rulesetid = 7, 
		RULE_ruleDefinition = 8, RULE_ruleid = 9, RULE_error = 10, RULE_pattern = 11, 
		RULE_component = 12, RULE_components = 13, RULE_lookups = 14, RULE_componentid = 15, 
		RULE_characteristicid = 16, RULE_characteristicids = 17, RULE_functionid = 18, 
		RULE_function = 19, RULE_tuple = 20, RULE_tuples = 21, RULE_filter = 22, 
		RULE_collection_filter = 23, RULE_condition = 24, RULE_expr = 25, RULE_intrinsic = 26, 
		RULE_constant = 27, RULE_date = 28, RULE_bool = 29, RULE_xint = 30, RULE_num = 31, 
		RULE_str = 32, RULE_constants = 33, RULE_comparison = 34, RULE_operation = 35;
	public static final String[] ruleNames = {
		"file", "collection", "collectionid", "aliasId", "alias", "aliasDefinitions", 
		"ruleset", "rulesetid", "ruleDefinition", "ruleid", "error", "pattern", 
		"component", "components", "lookups", "componentid", "characteristicid", 
		"characteristicids", "functionid", "function", "tuple", "tuples", "filter", 
		"collection_filter", "condition", "expr", "intrinsic", "constant", "date", 
		"bool", "xint", "num", "str", "constants", "comparison", "operation"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'after'", "'all'", "'and'", "'as'", "'before'", "'by'", "'collection'", 
		null, null, "'else'", null, "'expect'", "'false'", "'for'", "'includes'", 
		"'in'", "'is'", null, null, "'null'", "'of'", "'or'", "'require'", "'rule'", 
		"'ruleset'", "'since'", "'true'", "'that'", "'the'", "'then'", "'today'", 
		"'unique'", "'when'", "'<'", null, "'='", null, "'>'", null, "'('", "')'", 
		"'['", "']'", "'{'", "'}'", "','", "'.'", "'-'", null, null, null, null, 
		null, null, null, "'count'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "AFTER", "ALL", "AND", "AS", "BEFORE", "BY", "COLLECTION", "DO", 
		"DEFINE", "ELSE", "EXIST", "EXPECT", "FALSE", "FOR", "INCLUDES", "IN", 
		"IS", "MATCH", "NOT", "NULL", "OF", "OR", "REQUIRE", "RULE", "RULESET", 
		"SINCE", "TRUE", "THAT", "THE", "THEN", "TODAY", "UNIQUE", "WHEN", "LT", 
		"LE", "EQ", "GE", "GT", "NE", "L_PAREN", "R_PAREN", "L_BRACKET", "R_BRACKET", 
		"L_BRACE", "R_BRACE", "COMMA", "DOT", "NEG", "RULEID1", "RULEID2", "INT", 
		"NUMBER", "DATE1", "DATE2", "AGGREGATE", "COUNT", "CARDINAL", "DATEOP", 
		"MONTH", "TIMEUNIT", "WEEKDAY", "ID", "STRING", "COMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MsdsParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MsdsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FileContext extends ParserRuleContext {
		public List<AliasDefinitionsContext> aliasDefinitions() {
			return getRuleContexts(AliasDefinitionsContext.class);
		}
		public AliasDefinitionsContext aliasDefinitions(int i) {
			return getRuleContext(AliasDefinitionsContext.class,i);
		}
		public List<CollectionContext> collection() {
			return getRuleContexts(CollectionContext.class);
		}
		public CollectionContext collection(int i) {
			return getRuleContext(CollectionContext.class,i);
		}
		public List<RulesetContext> ruleset() {
			return getRuleContexts(RulesetContext.class);
		}
		public RulesetContext ruleset(int i) {
			return getRuleContext(RulesetContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).exitFile(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COLLECTION) | (1L << DEFINE) | (1L << RULESET))) != 0)) {
				{
				setState(75);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case DEFINE:
					{
					setState(72);
					aliasDefinitions();
					}
					break;
				case COLLECTION:
					{
					setState(73);
					collection();
					}
					break;
				case RULESET:
					{
					setState(74);
					ruleset();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CollectionContext extends ParserRuleContext {
		public TerminalNode COLLECTION() { return getToken(MsdsParser.COLLECTION, 0); }
		public CollectionidContext collectionid() {
			return getRuleContext(CollectionidContext.class,0);
		}
		public TerminalNode INCLUDES() { return getToken(MsdsParser.INCLUDES, 0); }
		public List<RulesetidContext> rulesetid() {
			return getRuleContexts(RulesetidContext.class);
		}
		public RulesetidContext rulesetid(int i) {
			return getRuleContext(RulesetidContext.class,i);
		}
		public List<RuleidContext> ruleid() {
			return getRuleContexts(RuleidContext.class);
		}
		public RuleidContext ruleid(int i) {
			return getRuleContext(RuleidContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MsdsParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MsdsParser.COMMA, i);
		}
		public AliasDefinitionsContext aliasDefinitions() {
			return getRuleContext(AliasDefinitionsContext.class,0);
		}
		public CollectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_collection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).enterCollection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).exitCollection(this);
		}
	}

	public final CollectionContext collection() throws RecognitionException {
		CollectionContext _localctx = new CollectionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_collection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(COLLECTION);
			setState(81);
			collectionid();
			setState(82);
			match(INCLUDES);
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(83);
				rulesetid();
				}
				break;
			case RULEID1:
			case RULEID2:
				{
				setState(84);
				ruleid();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(87);
				match(COMMA);
				setState(90);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ID:
					{
					setState(88);
					rulesetid();
					}
					break;
				case RULEID1:
				case RULEID2:
					{
					setState(89);
					ruleid();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(98);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(97);
				aliasDefinitions();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CollectionidContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MsdsParser.ID, 0); }
		public CollectionidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_collectionid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).enterCollectionid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).exitCollectionid(this);
		}
	}

	public final CollectionidContext collectionid() throws RecognitionException {
		CollectionidContext _localctx = new CollectionidContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_collectionid);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AliasIdContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MsdsParser.ID, 0); }
		public AliasIdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aliasId; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).enterAliasId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).exitAliasId(this);
		}
	}

	public final AliasIdContext aliasId() throws RecognitionException {
		AliasIdContext _localctx = new AliasIdContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_aliasId);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AliasContext extends ParserRuleContext {
		public AliasIdContext aliasId() {
			return getRuleContext(AliasIdContext.class,0);
		}
		public TerminalNode EQ() { return getToken(MsdsParser.EQ, 0); }
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public AliasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alias; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).enterAlias(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).exitAlias(this);
		}
	}

	public final AliasContext alias() throws RecognitionException {
		AliasContext _localctx = new AliasContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_alias);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			aliasId();
			setState(105);
			match(EQ);
			setState(106);
			constant();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AliasDefinitionsContext extends ParserRuleContext {
		public TerminalNode DEFINE() { return getToken(MsdsParser.DEFINE, 0); }
		public List<AliasContext> alias() {
			return getRuleContexts(AliasContext.class);
		}
		public AliasContext alias(int i) {
			return getRuleContext(AliasContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MsdsParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MsdsParser.COMMA, i);
		}
		public AliasDefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aliasDefinitions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).enterAliasDefinitions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).exitAliasDefinitions(this);
		}
	}

	public final AliasDefinitionsContext aliasDefinitions() throws RecognitionException {
		AliasDefinitionsContext _localctx = new AliasDefinitionsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_aliasDefinitions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(DEFINE);
			setState(109);
			alias();
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(110);
				match(COMMA);
				setState(111);
				alias();
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RulesetContext extends ParserRuleContext {
		public TerminalNode RULESET() { return getToken(MsdsParser.RULESET, 0); }
		public RulesetidContext rulesetid() {
			return getRuleContext(RulesetidContext.class,0);
		}
		public List<RuleDefinitionContext> ruleDefinition() {
			return getRuleContexts(RuleDefinitionContext.class);
		}
		public RuleDefinitionContext ruleDefinition(int i) {
			return getRuleContext(RuleDefinitionContext.class,i);
		}
		public RulesetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleset; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).enterRuleset(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).exitRuleset(this);
		}
	}

	public final RulesetContext ruleset() throws RecognitionException {
		RulesetContext _localctx = new RulesetContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ruleset);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(RULESET);
			setState(118);
			rulesetid();
			setState(120); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(119);
				ruleDefinition();
				}
				}
				setState(122); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==RULE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RulesetidContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MsdsParser.ID, 0); }
		public RulesetidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rulesetid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).enterRulesetid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).exitRulesetid(this);
		}
	}

	public final RulesetidContext rulesetid() throws RecognitionException {
		RulesetidContext _localctx = new RulesetidContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_rulesetid);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleDefinitionContext extends ParserRuleContext {
		public TerminalNode RULE() { return getToken(MsdsParser.RULE, 0); }
		public RuleidContext ruleid() {
			return getRuleContext(RuleidContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode ELSE() { return getToken(MsdsParser.ELSE, 0); }
		public ErrorContext error() {
			return getRuleContext(ErrorContext.class,0);
		}
		public TerminalNode REQUIRE() { return getToken(MsdsParser.REQUIRE, 0); }
		public TerminalNode EXPECT() { return getToken(MsdsParser.EXPECT, 0); }
		public TerminalNode WHEN() { return getToken(MsdsParser.WHEN, 0); }
		public FilterContext filter() {
			return getRuleContext(FilterContext.class,0);
		}
		public TerminalNode THEN() { return getToken(MsdsParser.THEN, 0); }
		public TerminalNode THAT() { return getToken(MsdsParser.THAT, 0); }
		public RuleDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).enterRuleDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).exitRuleDefinition(this);
		}
	}

	public final RuleDefinitionContext ruleDefinition() throws RecognitionException {
		RuleDefinitionContext _localctx = new RuleDefinitionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ruleDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(RULE);
			setState(127);
			ruleid();
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHEN) {
				{
				setState(128);
				match(WHEN);
				setState(129);
				filter(0);
				setState(130);
				match(THEN);
				}
			}

			setState(134);
			_la = _input.LA(1);
			if ( !(_la==EXPECT || _la==REQUIRE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==THAT) {
				{
				setState(135);
				match(THAT);
				}
			}

			setState(138);
			condition(0);
			setState(139);
			match(ELSE);
			setState(140);
			error();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleidContext extends ParserRuleContext {
		public TerminalNode RULEID1() { return getToken(MsdsParser.RULEID1, 0); }
		public TerminalNode RULEID2() { return getToken(MsdsParser.RULEID2, 0); }
		public RuleidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).enterRuleid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).exitRuleid(this);
		}
	}

	public final RuleidContext ruleid() throws RecognitionException {
		RuleidContext _localctx = new RuleidContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_ruleid);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			_la = _input.LA(1);
			if ( !(_la==RULEID1 || _la==RULEID2) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ErrorContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(MsdsParser.STRING, 0); }
		public ErrorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_error; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).enterError(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).exitError(this);
		}
	}

	public final ErrorContext error() throws RecognitionException {
		ErrorContext _localctx = new ErrorContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_error);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PatternContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(MsdsParser.STRING, 0); }
		public PatternContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pattern; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).enterPattern(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).exitPattern(this);
		}
	}

	public final PatternContext pattern() throws RecognitionException {
		PatternContext _localctx = new PatternContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_pattern);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComponentContext extends ParserRuleContext {
		public ComponentidContext componentid() {
			return getRuleContext(ComponentidContext.class,0);
		}
		public TerminalNode DOT() { return getToken(MsdsParser.DOT, 0); }
		public CharacteristicidContext characteristicid() {
			return getRuleContext(CharacteristicidContext.class,0);
		}
		public ComponentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_component; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).enterComponent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).exitComponent(this);
		}
	}

	public final ComponentContext component() throws RecognitionException {
		ComponentContext _localctx = new ComponentContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_component);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			componentid();
			setState(149);
			match(DOT);
			setState(150);
			characteristicid();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComponentsContext extends ParserRuleContext {
		public ComponentidContext componentid() {
			return getRuleContext(ComponentidContext.class,0);
		}
		public TerminalNode DOT() { return getToken(MsdsParser.DOT, 0); }
		public CharacteristicidsContext characteristicids() {
			return getRuleContext(CharacteristicidsContext.class,0);
		}
		public ComponentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_components; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).enterComponents(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).exitComponents(this);
		}
	}

	public final ComponentsContext components() throws RecognitionException {
		ComponentsContext _localctx = new ComponentsContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_components);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			componentid();
			setState(153);
			match(DOT);
			setState(154);
			characteristicids();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LookupsContext extends ParserRuleContext {
		public ComponentidContext componentid() {
			return getRuleContext(ComponentidContext.class,0);
		}
		public TerminalNode DOT() { return getToken(MsdsParser.DOT, 0); }
		public CharacteristicidsContext characteristicids() {
			return getRuleContext(CharacteristicidsContext.class,0);
		}
		public LookupsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lookups; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).enterLookups(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MsdsParserListener ) ((MsdsParserListener)listener).exitLookups(this);
		}
	}
